GNOME Bugzilla – Bug 663710
gnome-setting-daemon: crash on SIGSEGV
Last modified: 2012-09-27 08:43:58 UTC
Following core file was found on the system. It happened during the system update (probably update of xorg-x11-libs by rpm). gnome-settings-daemon-3.1.91, openSUSE 12.1 RC1 Core was generated by `/usr/lib/gnome-settings-daemon-3.0/gnome-settings-daemon'. Program terminated with signal 11, Segmentation fault.
+ Trace 229030
Thread 1 (Thread 0x7f90c6988920 (LWP 3375))
Might need to review the uses of GFileMonitor in gnome-settings-daemon.
Created attachment 224932 [details] [review] color: Fix potential crasher If a GFileMonitor event occurs whilst we're stopping the color plugin, it's possible that the file events will try to poke at things at it shouldn't.
Review of attachment 224932 [details] [review]: Looks right to me.
Attachment 224932 [details] pushed as ed81228 - color: Fix potential crasher