color: Fix potential crasher

If a GFileMonitor event occurs whilst we're stopping the color
plugin, it's possible that the file events will try to poke at things
at it shouldn't.

https://bugzilla.gnome.org/show_bug.cgi?id=663710